tests/errors/first_stage/.extern/expected_arg/expected_arg.as
; no argument for .extern instruction
.extern